Switch to Open-Meteo API - completely free, no API key required

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-# OpenWeather API Configuration
-VITE_OPENWEATHER_API_KEY=your_api_key_here
-VITE_API_BASE_URL=https://api.openweathermap.org/data/2.5
+# Open-Meteo API - Completely free, no API key required!
+# No configuration needed - the app will work out of the box
 
 # Default City (optional)
 VITE_DEFAULT_CITY=London
